--- a/SAMT-Website/Pages/Index.razor
+++ b/SAMT-Website/Pages/Index.razor
@@ -11,7 +11,7 @@
                     <div class="col-md-6">
                         <h2 style="font-weight: bold;">Winter SAMT 2021</h2>
                         <h2>@countdown Tage</h2>
-                        <p style="font-size: 20px;">am&nbsp;<strong><br>11.12.2021<br></strong> in der <a href="https://goo.gl/maps/r3HzQ58F1HzHJ43u8" target="_blank" style="color: #ff6f71;">BlueBox-Siegen<br></a></p>
+                        <p style="font-size: 20px;">am&nbsp;<strong><br>11.12.2021 ab 11:30 Uhr<br></strong> in der <a href="https://goo.gl/maps/r3HzQ58F1HzHJ43u8" target="_blank" style="color: #ff6f71;">BlueBox-Siegen<br></a></p>
                     </div>
                 </div>
             </div><!-- End: 1 Row 2 Columns -->
@@ -51,14 +51,14 @@
         <div class="container">
             <div class="block-heading">
                 <h2 style="color: #ff6f71;">Eintritt</h2>
-                <p class="text-white">Genaue Zeiten und Preise werden noch bekanntgegeben.<br>Voraussichtlich aber weniger als ein Euro ^^</p>
+                <p class="text-white"><br><strong>Wir sind nach der langen Pause zurück!</strong><br>Herzlich willkommen beim WinterSAMT 2021,<br>wir begrüßen euch ganz herzlich zu einem neuen lang ersehnten SAMT <strong>am 11.12.2021 ab 11:30 Uhr</strong> in der Bluebox-Siegen (Sandstraße 54, 57072 Siegen).<br><br><strong>Was erwartet euch?</strong><br><br><strong>Workshops </strong><br>* Synchro Workshop: 13 - 15 Uhr &amp; 16 - 18 Uhr<br>* K-Pop Workshop: 13:15 - 14:00 Uhr &amp; 14:15 - 15:00 Uhr<br>* Origami: 14 - 18 Uhr<br>* Werwolf: Ab 18 Uhr - 20 Uhr<br><br><strong>Programm </strong><br>* Animequiz: 14 - 15 Uhr<br>* K-Pop Randomdance: 15:15 Uhr - 16:15 Uhr<br>* Anime-Opening-Quiz: 17 Uhr - 18 Uhr<br><br><strong>Essen </strong><br>* Stockbrot: 16/17 Uhr Feuer an -&gt; Bis 20 Uhr / 20:30 Uhr<br>* Waffeln<br>* Kinderpunsch<br>* Brezeln<br>* Pizza<br><br><strong>Gäste </strong><br>* German Itasha e.V. mit 7 Autos!<br>* Manga Mafia<br>* Xenothy<br>* Kittensareashop<br>* Neos Atelier<br>* Koksii_art<br>* Paper Adventure<br><br></p>
             </div>
         </div>
     </section>
 </main>
 
 @code
-{ string countdown;
+{ string countdown = string.Empty;
 
     protected override Task OnInitializedAsync()
     {
@@ -68,12 +68,13 @@
 
     async Task Countdown()
     {
-        DateTime samt = new DateTime(2021, 12, 11);
-        while (true)
+        var samt = new DateTime(2021, 12, 11, 11, 30, 0);
+        while (!countdown.Equals("00:00:00:00"))
         {
             await Task.Delay(10);
             countdown = samt.Subtract(DateTime.Now).ToString("dd':'hh':'mm':'ss");
             StateHasChanged();
         }
+        countdown = "Dankeschön!";
     }
 }
