Fixed wrong .gitignore Added information about corona regulations

--- a/SAMT-Website/Pages/Index.razor
+++ b/SAMT-Website/Pages/Index.razor
@@ -51,7 +51,13 @@
         <div class="container">
             <div class="block-heading">
                 <h2 style="color: #ff6f71;">Eintritt</h2>
-                <p class="text-white"><br><strong>Wir sind nach der langen Pause zurück!</strong><br>Herzlich willkommen beim WinterSAMT 2021,<br>wir begrüßen euch ganz herzlich zu einem neuen lang ersehnten SAMT <strong>am 11.12.2021 ab 11:30 Uhr</strong> in der Bluebox-Siegen (Sandstraße 54, 57072 Siegen).<br><br><strong>Was erwartet euch?</strong><br><br><strong>Workshops </strong><br>* Synchro Workshop: 13 - 15 Uhr &amp; 16 - 18 Uhr<br>* K-Pop Workshop: 13:15 - 14:00 Uhr &amp; 14:15 - 15:00 Uhr<br>* Origami: 14 - 18 Uhr<br>* Werwolf: Ab 18 Uhr - 20 Uhr<br><br><strong>Programm </strong><br>* Animequiz: 14 - 15 Uhr<br>* K-Pop Randomdance: 15:15 Uhr - 16:15 Uhr<br>* Anime-Opening-Quiz: 17 Uhr - 18 Uhr<br><br><strong>Essen </strong><br>* Stockbrot: 16/17 Uhr Feuer an -&gt; Bis 20 Uhr / 20:30 Uhr<br>* Waffeln<br>* Kinderpunsch<br>* Brezeln<br>* Pizza<br><br><strong>Gäste </strong><br>* German Itasha e.V. mit 7 Autos!<br>* Manga Mafia<br>* Xenothy<br>* Kittensareashop<br>* Neos Atelier<br>* Koksii_art<br>* Paper Adventure<br><br></p>
+                <p class="text-white"><br><strong>Wir sind nach der langen Pause zurück!</strong>
+                    <br><strong>Bitte beachtet 2G+ vor Ort!</strong> Alle über 16 Jahren benötigen einen Test nicht älter als 24 Stunden!<br>
+                    <br>Herzlich willkommen beim WinterSAMT 2021,
+                    <br>wir begrüßen euch ganz herzlich zu einem neuen lang ersehnten SAMT 
+                    <strong>am 11.12.2021 ab 11:30 Uhr</strong> in der Bluebox-Siegen (Sandstraße 54, 57072 Siegen).<br>
+                    <br><strong>Was erwartet euch?</strong><br>
+                    <br><strong>Workshops </strong><br>* Synchro Workshop: 13 - 15 Uhr &amp; 16 - 18 Uhr<br>* K-Pop Workshop: 13:15 - 14:00 Uhr &amp; 14:15 - 15:00 Uhr<br>* Origami: 14 - 18 Uhr<br>* Werwolf: Ab 18 Uhr - 20 Uhr<br><br><strong>Programm </strong><br>* Animequiz: 14 - 15 Uhr<br>* K-Pop Randomdance: 15:15 Uhr - 16:15 Uhr<br>* Anime-Opening-Quiz: 17 Uhr - 18 Uhr<br><br><strong>Essen </strong><br>* Stockbrot: 16/17 Uhr Feuer an -&gt; Bis 20 Uhr / 20:30 Uhr<br>* Waffeln<br>* Kinderpunsch<br>* Brezeln<br>* Pizza<br><br><strong>Gäste </strong><br>* German Itasha e.V. mit 7 Autos!<br>* Manga Mafia<br>* Xenothy<br>* Kittensareashop<br>* Neos Atelier<br>* Koksii_art<br>* Paper Adventure<br><br></p>
             </div>
         </div>
     </section>
