--- a/SAMT-Website/Pages/Index.razor
+++ b/SAMT-Website/Pages/Index.razor
@@ -51,7 +51,7 @@
         <div class="container">
             <div class="block-heading">
                 <h2 style="color: #ff6f71;">Eintritt</h2>
-                <p class="text-white"><br><strong>Wir sind nach der langen Pause zurück!</strong>
+                <p class="text-white"><br><strong>Wir sind nach der langen Pause zurück!</strong><br>
                     <br><strong>Bitte beachtet 2G+ vor Ort!</strong> Alle über 16 Jahren benötigen einen Test nicht älter als 24 Stunden!<br>
                     <br>Herzlich willkommen beim WinterSAMT 2021,
                     <br>wir begrüßen euch ganz herzlich zu einem neuen lang ersehnten SAMT 
