--- a/SAMT-Website/Pages/_Host.cshtml
+++ b/SAMT-Website/Pages/_Host.cshtml
@@ -92,6 +92,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/smart-forms.min.js?h=220695d33937f0c1d9977599320bf21d"></script>
     <script src="assets/js/bs-init.js?h=7563c52cc0a72a92d96ce0159b71241c"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
     <script src="assets/js/vanilla-zoom.js?h=6a37ea9c996b05f763161c73127d66bc"></script>
