--- a/SAMT-Website/Pages/Index.razor
+++ b/SAMT-Website/Pages/Index.razor
@@ -10,7 +10,7 @@
                     <div class="col-md-6"><img class="img-fluid" src="assets/img/WinterSAMT.png?h=55bf114ce420b29d02a1a5a9df17cb68"></div>
                     <div class="col-md-6">
                         <h2 style="font-weight: bold;">Winter SAMT 2021</h2>
-                        <h2>@countdown Tage</h2>
+                        <h2>@countdown</h2>
                         <p style="font-size: 20px;">am&nbsp;<strong><br>11.12.2021 ab 11:30 Uhr<br></strong> in der <a href="https://goo.gl/maps/r3HzQ58F1HzHJ43u8" target="_blank" style="color: #ff6f71;">BlueBox-Siegen<br></a></p>
                     </div>
                 </div>
@@ -75,10 +75,10 @@
     async Task Countdown()
     {
         var samt = new DateTime(2021, 12, 11, 11, 30, 0);
-        while (samt < DateTime.Now)
+        while (samt > DateTime.Now)
         {
             await Task.Delay(10);
-            countdown = samt.Subtract(DateTime.Now).ToString("dd':'hh':'mm':'ss");
+            countdown = samt.Subtract(DateTime.Now).ToString("dd':'hh':'mm':'ss") + " Tage";
             StateHasChanged();
         }
         countdown = "Dankeschön!";
