* Updated for new Frühlings SAMT 2022

--- a/SAMT-Website/Pages/Index.razor
+++ b/SAMT-Website/Pages/Index.razor
@@ -9,9 +9,9 @@
                 <div class="row align-items-center">
                     <div class="col-md-6"><img class="img-fluid" src="assets/img/WinterSAMT.png?h=55bf114ce420b29d02a1a5a9df17cb68"></div>
                     <div class="col-md-6">
-                        <h2 style="font-weight: bold;">Winter SAMT 2021</h2>
+                        <h2 style="font-weight: bold;">Frühlings SAMT 2022</h2>
                         <h2>@countdown</h2>
-                        <p style="font-size: 20px;">am&nbsp;<strong><br>11.12.2021 ab 11:30 Uhr<br></strong> in der <a href="https://goo.gl/maps/r3HzQ58F1HzHJ43u8" target="_blank" style="color: #ff6f71;">BlueBox-Siegen<br></a></p>
+                        <p style="font-size: 20px;">am&nbsp;<strong><br>23.04.2022 ab 11:30 Uhr<br></strong> in der <a href="https://goo.gl/maps/r3HzQ58F1HzHJ43u8" target="_blank" style="color: #ff6f71;">BlueBox-Siegen<br></a></p>
                     </div>
                 </div>
             </div><!-- End: 1 Row 2 Columns -->
@@ -27,7 +27,7 @@
                 <div class="col-md-5 feature-box">
                     <i class="fas fa-paint-brush icon" style="color: #ff6f71;"></i>
                     <h4>Kleine Artist Alley</h4>
-                    <p>Kleine aber feine "Artist Alley" mit 2 bis 3 wunderschönen Künstlern :)</p>
+                    <p>Kleine aber feine "Artist Alley" mit 2 bis 3 wundervollen Künstlern :)</p>
                 </div>
                 <div class="col-md-5 feature-box">
                     <i class="fas fa-heartbeat icon" style="color: #ff6f71;"></i>
@@ -51,13 +51,14 @@
         <div class="container">
             <div class="block-heading">
                 <h2 style="color: #ff6f71;">Eintritt</h2>
-                <p class="text-white"><br><strong>Wir sind nach der langen Pause zurück!</strong><br>
+                <p class="text-white">Die Planung hat begonnen, weitere Informationen folgen in den nächsten Monaten!</p>
+                @*<p class="text-white"><br><strong>Wir sind nach der langen Pause zurück!</strong><br>
                     <br><strong>Bitte beachtet 2G+ vor Ort!</strong> Alle über 16 Jahren benötigen einen Test nicht älter als 24 Stunden!<br>
                     <br>Herzlich willkommen beim WinterSAMT 2021,
                     <br>wir begrüßen euch ganz herzlich zu einem neuen lang ersehnten SAMT 
                     <strong>am 11.12.2021 ab 11:30 Uhr</strong> in der Bluebox-Siegen (Sandstraße 54, 57072 Siegen).<br>
                     <br><strong>Was erwartet euch?</strong><br>
-                    <br><strong>Workshops </strong><br>* Synchro Workshop: 13 - 15 Uhr &amp; 16 - 18 Uhr<br>* K-Pop Workshop: 13:15 - 14:00 Uhr &amp; 14:15 - 15:00 Uhr<br>* Origami: 14 - 18 Uhr<br>* Werwolf: Ab 18 Uhr - 20 Uhr<br><br><strong>Programm </strong><br>* Animequiz: 14 - 15 Uhr<br>* K-Pop Randomdance: 15:15 Uhr - 16:15 Uhr<br>* Anime-Opening-Quiz: 17 Uhr - 18 Uhr<br><br><strong>Essen </strong><br>* Stockbrot: 16/17 Uhr Feuer an -&gt; Bis 20 Uhr / 20:30 Uhr<br>* Waffeln<br>* Kinderpunsch<br>* Brezeln<br>* Pizza<br><br><strong>Gäste </strong><br>* German Itasha e.V. mit 7 Autos!<br>* Manga Mafia<br>* Xenothy<br>* Kittensareashop<br>* Neos Atelier<br>* Koksii_art<br>* Paper Adventure<br><br></p>
+                    <br><strong>Workshops </strong><br>* Synchro Workshop: 13 - 15 Uhr &amp; 16 - 18 Uhr<br>* K-Pop Workshop: 13:15 - 14:00 Uhr &amp; 14:15 - 15:00 Uhr<br>* Origami: 14 - 18 Uhr<br>* Werwolf: Ab 18 Uhr - 20 Uhr<br><br><strong>Programm </strong><br>* Animequiz: 14 - 15 Uhr<br>* K-Pop Randomdance: 15:15 Uhr - 16:15 Uhr<br>* Anime-Opening-Quiz: 17 Uhr - 18 Uhr<br><br><strong>Essen </strong><br>* Stockbrot: 16/17 Uhr Feuer an -&gt; Bis 20 Uhr / 20:30 Uhr<br>* Waffeln<br>* Kinderpunsch<br>* Brezeln<br>* Pizza<br><br><strong>Gäste </strong><br>* German Itasha e.V. mit 7 Autos!<br>* Manga Mafia<br>* Xenothy<br>* Kittensareashop<br>* Neos Atelier<br>* Koksii_art<br>* Paper Adventure<br><br></p>*@
             </div>
         </div>
     </section>
@@ -74,7 +75,7 @@
 
     async Task Countdown()
     {
-        var samt = new DateTime(2021, 12, 11, 11, 30, 0);
+        var samt = new DateTime(2022, 04, 23, 11, 30, 0);
         while (samt > DateTime.Now)
         {
             await Task.Delay(10);
