Started database implementation

--- a/SAMT-Website/Pages/Guests.razor
+++ b/SAMT-Website/Pages/Guests.razor
@@ -1,5 +1,11 @@
 ﻿@page "/guests"
 
+@inject IDbContextFactory<samt_websiteContext> _DbFactory
+
+@{
+    var context = _DbFactory.CreateDbContext();
+}
+
 <main class="page">
     <!-- Start: Team Boxed -->
     <section class="team-boxed">
