--- a/SAMT-Website/Pages/Index.razor
+++ b/SAMT-Website/Pages/Index.razor
@@ -27,7 +27,7 @@
                 <div class="col-md-5 feature-box">
                     <i class="fas fa-paint-brush icon" style="color: #ff6f71;"></i>
                     <h4>Kleine Artist Alley</h4>
-                    <p>Kleine aber feine "Artist Alley" mit 2 bis 3 wundervollen Künstlern :)</p>
+                    <p>Kleine aber feine "Artist Alley" mit 2, 3, vielleicht auch 5 wundervollen Künstlern :)</p>
                 </div>
                 <div class="col-md-5 feature-box">
                     <i class="fas fa-heartbeat icon" style="color: #ff6f71;"></i>
