Align text center

--- a/SAMT-Website/Pages/Guests.razor
+++ b/SAMT-Website/Pages/Guests.razor
@@ -51,7 +51,7 @@
                     }
                     else
                     {
-                        <span>Coming soon...</span>
+                        <span class="text-center">Coming soon...</span>
                     }
                 </div><!-- End: People -->
         </div>
