Fixed "active" state in navigation with NavLink element

--- a/SAMT-Website/Shared/NavMenu.razor
+++ b/SAMT-Website/Shared/NavMenu.razor
@@ -3,11 +3,11 @@
         <a class="navbar-brand text-center logo" data-bss-hover-animate="pulse" href="index" style="margin-right: 0px;padding: 0px;max-width: auto;width: auto;"><img src="assets/img/android-chrome-192x192.png?h=8f0d7f118b827e465480d098f7d39318" width="75" style="margin-right: 15px;">SAMT<small style="font-size: 15px;"><br>Siegener Anime und Manga Treff</small></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse text-center" id="navcol-1">
             <ul class="navbar-nav navbar-nav-scroll ms-auto">
-                <li class="nav-item"><a class="nav-link" href="index"><i class="fas fa-home" style="transform: scale(2);padding-right: 10px;"></i>STart</a></li>
-                <li class="nav-item"><a class="nav-link" href="guests"><i class="fas fa-users" style="transform: scale(2);padding-right: 10px;"></i>Gäste</a></li>
-                <li class="nav-item"><a class="nav-link" href="gallery"><i class="fas fa-images" style="transform: scale(2);padding-right: 10px;"></i>Galerie</a></li>
-                <li class="nav-item"><a class="nav-link" href="about-us"><i class="fas fa-info-circle" style="transform: scale(2);padding-right: 10px;"></i>Über uns</a></li>
-                <li class="nav-item"><a class="nav-link" href="contact-us"><i class="fas fa-question-circle" style="transform: scale(2);padding-right: 10px;"></i>Kontakt</a></li>
+                <li class="nav-item"><NavLink ActiveClass="active" Match="NavLinkMatch.All" class="nav-link" href="index"><i class="fas fa-home" style="transform: scale(2);padding-right: 10px;"></i>STart</NavLink></li>
+                <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="guests"><i class="fas fa-users" style="transform: scale(2);padding-right: 10px;"></i>Gäste</NavLink></li>
+                <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="gallery"><i class="fas fa-images" style="transform: scale(2);padding-right: 10px;"></i>Galerie</NavLink></li>
+                <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="about-us"><i class="fas fa-info-circle" style="transform: scale(2);padding-right: 10px;"></i>Über uns</NavLink></li>
+                <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="contact-us"><i class="fas fa-question-circle" style="transform: scale(2);padding-right: 10px;"></i>Kontakt</NavLink></li>
                 <li class="nav-item" data-bss-hover-animate="pulse">
                     <a class="nav-link" href="https://discord.gg/QHC3UE9" target="_blank">
                         <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-discord" style="transform: scale(3);">
