Fixed a few bugs Removed unused libs

--- a/SAMT-Website/Pages/Guests.razor
+++ b/SAMT-Website/Pages/Guests.razor
@@ -41,7 +41,7 @@
                                         }
                                         @if (guest.Linktree != null)
                                         {
-                                            <a href="@guest.Linktree" target="_blank"><i class="fab fa-tree"></i></a>
+                                            <a href="@guest.Linktree" target="_blank"><i class="fas fa-tree"></i></a>
                                         }
                                     </div>
                                 </div>
