--- a/SAMT-Website/Shared/Footer.razor
+++ b/SAMT-Website/Shared/Footer.razor
@@ -13,6 +13,6 @@
         </div>
     </div>
     <div class="footer-copyright">
-        <p>© 2021 Siegener Anime und Manga Treff - SAMT</p>
+        <p>© @DateTime.Now.Year Siegener Anime und Manga Treff - SAMT</p>
     </div>
 </footer><!-- End: Footer Dark -->
