--- a/SAMT-Website/Pages/Index.razor
+++ b/SAMT-Website/Pages/Index.razor
@@ -20,7 +20,7 @@
                     <div class="col-md-6">
                         <h2 style="font-weight: bold;">@samt.Name</h2>
                         <h2>@countdown</h2>
-                        <p style="font-size: 20px;">am&nbsp;<strong><br>@(samt.Date.ToString("dd.MM.yyyy ab t ")+"Uhr")<br></strong> in der <a href="https://goo.gl/maps/r3HzQ58F1HzHJ43u8" target="_blank" style="color: #ff6f71;">BlueBox-Siegen<br></a></p>
+                        <p style="font-size: 20px;">am&nbsp;<strong><br>@(samt.Date.ToString("dd.MM.yyyy ab hh:mm ")+"Uhr")<br></strong> in der <a href="https://goo.gl/maps/r3HzQ58F1HzHJ43u8" target="_blank" style="color: #ff6f71;">BlueBox-Siegen<br></a></p>
                     </div>
                 </div>
             </div><!-- End: 1 Row 2 Columns -->
