--- a/SAMT-Website/Pages/Guests.razor
+++ b/SAMT-Website/Pages/Guests.razor
@@ -39,6 +39,10 @@
                                         {
                                             <a href="@guest.Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
                                         }
+                                        @if (guest.Etsy != null)
+                                        {
+                                            <a href="@guest.Etsy" target="_blank"><i class="fab fa-etsy"></i></a>
+                                        }
                                         @if (guest.Linktree != null)
                                         {
                                             <a href="@guest.Linktree" target="_blank"><i class="fas fa-tree"></i></a>
