Align content center

--- a/SAMT-Website/Pages/Guests.razor
+++ b/SAMT-Website/Pages/Guests.razor
@@ -20,7 +20,7 @@
                     <p class="text-center">Wir freuen uns sehr euch unsere diesjährigen Gäste vorstellen zu dürfen!<br></p>
                 </div><!-- End: Intro -->
                 <!-- Start: People -->
-            <div class="row people">
+            <div class="row justify-content-center people">
                     @if (samt.EventsGuests.Count != 0)
                     {
                         @foreach (var guest in samt.EventsGuests.Select(x => x.FkGuests))
