Updated DB context Added ImageLink

--- a/SAMT-Website/Pages/Guests.razor
+++ b/SAMT-Website/Pages/Guests.razor
@@ -1,5 +1,5 @@
 ﻿@page "/guests"
-@using SAMT_Website.models
+@using SAMT_Website.Models
 @using Microsoft.EntityFrameworkCore
 
 @inject IDbContextFactory<samt_websiteContext> _DbFactory
