Fixed warnings Added cash register Added class lib for database models

--- a/SAMT-Website/Pages/Guests.razor
+++ b/SAMT-Website/Pages/Guests.razor
@@ -1,6 +1,6 @@
 ﻿@page "/guests"
-@using SAMT_Website.Models
 @using Microsoft.EntityFrameworkCore
+@using Database.Models
 
 @inject IDbContextFactory<samt_websiteContext> _DbFactory
 
